@@ -1,5 +1,7 @@
 === HEAD
 
+* Add SQL::Function#distinct for easier creation of aggregate functions using DISTINCT (jeremyevans)
+
 * Add SQL::Function#over for easier creation of window functions (jeremyevans)
 
 * Don't clear validation instance_hooks until after a successful save (jeremyevans)
